crates/reinhardt-pages/tests/ui/style/fail/indirect_initializer.rs
use reinhardt_pages::style_def;

#[style_def]
static STYLES: CardStyles = make_styles();

fn make_styles() {}
fn main() {}
